svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatroom
spec:
  selector:
    app: chatroom
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 30000
  type: NodePort
